@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2020-01-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/meta.c (WriteMETAImage): Assure that 'iptc_offset' is
+initialized and valid.</li>
+<li>coders/jpeg.c (ReadJPEGImage): Assure that evaluating the
+embedded profile length does not suffer from undefined behavior.</li>
+</ul>
+</blockquote>
 <p>2020-01-12  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
